# portfolio

./: .gitignore  README.md
Battleships/: CMakeLists.txt  README.md  SDLship.c  SDLship.h  main.c  options.txt  shipAI.c  shipAI.h  shipOptions.h  shipStructs.h
Battleships/src/: CMakeLists.txt  SDLship.c  main.c  saveGame.c  saveGame.h  shipFunc.c  shipFunc.h  shipOptions.c  shipStructs.h
InventorySystem/: InventorySystem_MP.code-workspace  InventorySystem_MP.uproject
InventorySystem/Binaries/Win64/: InventorySystem_MPEditor.target  UnrealEditor-InventorySystem.patch_0.exp  UnrealEditor-InventorySystem.patch_0.lib  UnrealEditor-InventorySystem.patch_1.exp  UnrealEditor-InventorySystem.patch_1.lib  UnrealEditor-InventorySystem.patch_2.exp  UnrealEditor-InventorySystem.patch_2.lib  UnrealEditor-InventorySystem.patch_3.exp  UnrealEditor-InventorySystem.patch_3.lib  UnrealEditor-InventorySystem_MP.patch_0.exp  UnrealEditor-InventorySystem_MP.patch_0.lib  UnrealEditor-InventorySystem_MP.patch_1.exp  UnrealEditor-InventorySystem_MP.patch_1.lib  UnrealEditor-InventorySystem_MP.patch_10.exp  UnrealEditor-InventorySystem_MP.patch_10.lib  UnrealEditor-InventorySystem_MP.patch_2.exp  UnrealEditor-InventorySystem_MP.patch_2.lib  UnrealEditor-InventorySystem_MP.patch_3.exp  UnrealEditor-InventorySystem_MP.patch_3.lib  UnrealEditor-InventorySystem_MP.patch_4.exp  UnrealEditor-InventorySystem_MP.patch_4.lib  UnrealEditor-InventorySystem_MP.patch_5.exp  UnrealEditor-InventorySystem_MP.patch_5.lib  UnrealEditor-InventorySystem_MP.patch_6.exp  UnrealEditor-InventorySystem_MP.patch_6.lib  UnrealEditor-InventorySystem_MP.patch_7.exp  UnrealEditor-InventorySystem_MP.patch_7.lib  UnrealEditor.modules  (+4 more)
InventorySystem/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
InventorySystem/Source/: InventorySystem_MP.Target.cs  InventorySystem_MPEditor.Target.cs
LZW-Encoder/: CArray.hpp  CCounter.cpp  CCounter.hpp  CDec.cpp  CDec.hpp  CDoubleHashing.hpp  CForwardCounter.cpp  CKnot.cpp  CKnot.hpp  CLZW.hpp  CTrieDec.cpp  CTrieEnc.cpp  CTrieEnc.hpp  CVariableCounter.hpp  XOutOfBounds.cpp  XOutOfBounds.hpp  mainPraktikum.cpp
LZW-Encoder_Decoder/: CArrayDec.cpp  CArrayDec.hpp  CArrayEnc.cpp  CArrayEnc.hpp  CDoubleHashing.cpp  CEnc.cpp  CEnc.hpp  CEntry.cpp  CEntry.hpp  CForwardCounter.hpp  CLZW.cpp  CTrieDec.hpp  CVariableCounter.cpp
cuda-benchmarks/: CMakeLists.txt  README.md
cuda-benchmarks/include/: cuda_error_handling.h  helper_string.h  large_block.cuh
cuda-benchmarks/src/: CMakeLists.txt
cuda-benchmarks/src/dstsmem_vs_l2/: CMakeLists.txt  dstsmem.cu  dstsmem_vs_l2.h  smem.cu
cuda-benchmarks/src/kmeans/: CMakeLists.txt  kmeans-TBC-limited.cu  kmeans-TBC-ulong.cu  kmeans-TBC.cu  kmeans-double.h  kmeans-ulong.cu  kmeans-ulong.h  kmeans.cu  kmeans.h
cuda-benchmarks/src/reduction/: CMakeLists.txt  reduction-cluster.cu  reduction-nocluster.cu  reduction.h
metric-consensus/: README.md
(+44 files in other folders)
